# carousel

./: .dockerignore  Cargo.toml  Dockerfile  README.md  justfile
docker/: entrypoint.sh
kubernetes/: crb.yaml  deployment.yaml  kustomization.yaml  svcacct.yaml
src/: main.rs
